[gd_scene load_steps=37 format=3 uid="uid://c8s6l7pbftwq4"]

[ext_resource type="Script" path="res://worlds/death_screen.gd" id="1_s50xw"]
[ext_resource type="Texture2D" uid="uid://bujaahxnmv2a2" path="res://assets/sprites/apple_seed.png" id="2_j6jbm"]
[ext_resource type="PackedScene" uid="uid://cray6xpq4vkl" path="res://plants/tree_main.tscn" id="3_f3vax"]
[ext_resource type="Script" path="res://util/CursorCamera.gd" id="4_ao1wp"]
[ext_resource type="FontFile" uid="uid://mic3721t4goo" path="res://assets/fonts/6px-Normal.ttf" id="5_t04wn"]
[ext_resource type="LabelSettings" uid="uid://bf8m6t4hiop7d" path="res://assets/fonts/default_label_settings.tres" id="6_nh7hm"]
[ext_resource type="Texture2D" uid="uid://bgsxux7ffl2ak" path="res://assets/sprites/toolbar/tool_open.png" id="7_bw0nq"]
[ext_resource type="Texture2D" uid="uid://c04nqs6j331i7" path="res://assets/sprites/toolbar/tool_seeds.png" id="8_td6p2"]
[ext_resource type="Texture2D" uid="uid://bc71aeqfrjc4d" path="res://assets/sprites/toolbar/tool_energy.png" id="9_cc31c"]
[ext_resource type="Texture2D" uid="uid://ci5s0lu82i81y" path="res://assets/sprites/toolbar/tool_resource.png" id="10_0f0us"]
[ext_resource type="Texture2D" uid="uid://ccq1kqhm81gbm" path="res://assets/sprites/toolbar/tool_menu_background.png" id="11_m46n3"]
[ext_resource type="Texture2D" uid="uid://66w7ogqp7mvk" path="res://assets/sprites/toolbar/seed_highlight.png" id="12_jcc83"]
[ext_resource type="Texture2D" uid="uid://d0xy2pfsrpq0m" path="res://assets/sprites/plants/sunflower_seed.png" id="13_opfuu"]
[ext_resource type="Texture2D" uid="uid://bdw52ri2m7x7q" path="res://assets/sprites/plants/carrot_seed.png" id="14_sebei"]
[ext_resource type="Texture2D" uid="uid://d07u4h0a2am6x" path="res://assets/sprites/plants/blueberry_seed.png" id="15_t7aqi"]
[ext_resource type="Texture2D" uid="uid://nk2umuvna3ve" path="res://assets/sprites/plants/apple_seed.png" id="16_4ckmu"]
[ext_resource type="Texture2D" uid="uid://duaf7ryed24vk" path="res://assets/sprites/plants/poppy_seed.png" id="17_wab5s"]
[ext_resource type="Texture2D" uid="uid://dew2q8k2q1l2i" path="res://assets/sprites/buttons/exit_to_mm_temp_button.png" id="18_kd1qr"]
[ext_resource type="Texture2D" uid="uid://ngbdld7ow7e2" path="res://assets/sprites/buttons/exit_to_mm_temp_button_hover.png" id="19_vhcwi"]
[ext_resource type="Texture2D" uid="uid://sl6avjshbe26" path="res://assets/sprites/plants/carrot_4.png" id="20_1oqm3"]
[ext_resource type="Texture2D" uid="uid://y3vfd876t6tg" path="res://assets/sprites/plants/poppy_4.png" id="21_htfj4"]
[ext_resource type="Texture2D" uid="uid://d0kjic5gxed78" path="res://assets/sprites/plants/apple_4.png" id="22_kyist"]
[ext_resource type="Texture2D" uid="uid://bemikugl35p4a" path="res://assets/sprites/plants/blueberry_4.png" id="23_7qp5h"]
[ext_resource type="Texture2D" uid="uid://bsbte62wt5lyp" path="res://assets/sprites/Sun Dial.png" id="24_bh51l"]
[ext_resource type="Texture2D" uid="uid://bnkrjc8ylndue" path="res://assets/sprites/energy_indicator.png" id="25_x356o"]
[ext_resource type="FontFile" uid="uid://b4n4ol5uhwyfr" path="res://assets/fonts/cg-pixel-3x5.ttf" id="26_iwxem"]
[ext_resource type="AudioStream" uid="uid://c7laf2iwjv6h3" path="res://assets/music/temp_lost.wav" id="27_i442l"]

[sub_resource type="LabelSettings" id="LabelSettings_veqrq"]
line_spacing = 1.0
font_size = 8
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_i022j"]
font = ExtResource("26_iwxem")
font_size = 5

[sub_resource type="Animation" id="Animation_kasw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tree_Main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, -8)]
}

[sub_resource type="Animation" id="Animation_hifsq"]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tree_Main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-8, -8), Vector2(-9, -8), Vector2(-7, -8), Vector2(-8, -8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rx43r"]
_data = {
"RESET": SubResource("Animation_kasw6"),
"shake": SubResource("Animation_hifsq")
}

[sub_resource type="Animation" id="Animation_cfh5l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade_Anim/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade_Anim/Fade:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cqmex"]
resource_name = "fade_to_Black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade_Anim/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade_Anim/Fade:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_erkbl"]
resource_name = "fade_to_normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade_Anim/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ntmuj"]
_data = {
"RESET": SubResource("Animation_cfh5l"),
"fade_to_Black": SubResource("Animation_cqmex"),
"fade_to_normal": SubResource("Animation_erkbl")
}

[node name="Death_Screen" type="Node2D"]
script = ExtResource("1_s50xw")

[node name="TempBackground" type="Sprite2D" parent="."]
modulate = Color(0.127937, 0.349791, 0.276324, 1)
texture_filter = 1
scale = Vector2(32, 32)
texture = ExtResource("2_j6jbm")

[node name="Tree_Main" parent="." instance=ExtResource("3_f3vax")]
process_mode = 3
position = Vector2(-8, -8)

[node name="CursorCamera" type="Camera2D" parent="."]
limit_left = -64
limit_top = -64
limit_right = 64
limit_bottom = 64
limit_smoothed = true
editor_draw_limits = true
script = ExtResource("4_ao1wp")

[node name="Film" type="ColorRect" parent="CursorCamera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="Debug_Label" type="Label" parent="CursorCamera"]
visible = false
texture_filter = 1
offset_left = -4.0
offset_top = -2.0
offset_right = 52.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("5_t04wn")
text = "center"
label_settings = ExtResource("6_nh7hm")
autowrap_mode = 3

[node name="ToolBelt" type="Control" parent="CursorCamera"]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 0
metadata/_edit_use_anchors_ = true

[node name="ToolBelt_Toggle" type="TextureButton" parent="CursorCamera/ToolBelt"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = -30.0
offset_top = 14.0
offset_right = -22.0
offset_bottom = 19.0
texture_normal = ExtResource("7_bw0nq")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Seeds_Menu_Toggle" type="TextureButton" parent="CursorCamera/ToolBelt"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = -21.0
offset_top = 14.0
offset_right = -13.0
offset_bottom = 19.0
texture_normal = ExtResource("8_td6p2")
metadata/_edit_use_anchors_ = true

[node name="Power_Menu_Toggle" type="TextureButton" parent="CursorCamera/ToolBelt"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = -12.0
offset_top = 14.0
offset_right = -4.0
offset_bottom = 19.0
texture_normal = ExtResource("9_cc31c")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Resources_Menu_Toggle" type="TextureButton" parent="CursorCamera/ToolBelt"]
visible = false
z_index = 2
texture_filter = 1
layout_mode = 0
offset_left = -3.0
offset_top = 14.0
offset_right = 5.0
offset_bottom = 19.0
texture_normal = ExtResource("10_0f0us")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Seeds_Menu" type="Sprite2D" parent="CursorCamera/ToolBelt"]
visible = false
z_index = 3
position = Vector2(0, 26)
texture = ExtResource("11_m46n3")

[node name="Highlight" type="Node2D" parent="CursorCamera/ToolBelt/Seeds_Menu"]

[node name="Sprite2D" type="Sprite2D" parent="CursorCamera/ToolBelt/Seeds_Menu/Highlight"]
position = Vector2(-18, -3)
texture = ExtResource("12_jcc83")

[node name="Sunflower" type="TextureButton" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 5
offset_left = -20.0
offset_top = -5.0
offset_right = -16.0
offset_bottom = -1.0
texture_normal = ExtResource("13_opfuu")
stretch_mode = 0

[node name="Sunflower_Total" type="Label" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 5
texture_filter = 1
offset_left = -22.0
offset_top = -2.0
offset_right = -14.0
offset_bottom = 6.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = SubResource("LabelSettings_veqrq")
autowrap_mode = 3

[node name="Carrot" type="TextureButton" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 5
offset_left = -11.0
offset_top = -5.0
offset_right = -7.0
offset_bottom = -1.0
texture_normal = ExtResource("14_sebei")
stretch_mode = 0

[node name="Carrot_Total" type="Label" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 5
texture_filter = 1
offset_left = -13.0
offset_top = -2.0
offset_right = -5.0
offset_bottom = 6.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = SubResource("LabelSettings_veqrq")
autowrap_mode = 3

[node name="Blueberry" type="TextureButton" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 5
offset_left = -2.0
offset_top = -5.0
offset_right = 2.0
offset_bottom = -1.0
texture_normal = ExtResource("15_t7aqi")
stretch_mode = 0

[node name="Blueberry_Total" type="Label" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 5
texture_filter = 1
offset_left = -4.0
offset_top = -2.0
offset_right = 4.0
offset_bottom = 6.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = SubResource("LabelSettings_veqrq")
autowrap_mode = 3

[node name="Apple" type="TextureButton" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 5
offset_left = 7.0
offset_top = -5.0
offset_right = 11.0
offset_bottom = -1.0
texture_normal = ExtResource("16_4ckmu")
stretch_mode = 0

[node name="Apple_Total" type="Label" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 5
texture_filter = 1
offset_left = 5.0
offset_top = -2.0
offset_right = 13.0
offset_bottom = 6.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = SubResource("LabelSettings_veqrq")
autowrap_mode = 3

[node name="Poppy" type="TextureButton" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 5
offset_left = 16.0
offset_top = -5.0
offset_right = 20.0
offset_bottom = -1.0
texture_normal = ExtResource("17_wab5s")
stretch_mode = 0

[node name="Poppy_Total" type="Label" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 5
texture_filter = 1
offset_left = 14.0
offset_top = -2.0
offset_right = 22.0
offset_bottom = 6.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = SubResource("LabelSettings_veqrq")
autowrap_mode = 3

[node name="Plant_Info" type="Label" parent="CursorCamera/ToolBelt/Seeds_Menu"]
z_index = 3
texture_filter = 1
offset_left = -30.0
offset_top = -2.0
offset_right = 34.0
offset_bottom = 6.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = ExtResource("6_nh7hm")
autowrap_mode = 3

[node name="Options_Menu" type="Sprite2D" parent="CursorCamera/ToolBelt"]
visible = false
z_index = 3
position = Vector2(0, 26)
texture = ExtResource("11_m46n3")

[node name="Main_Menu" type="TextureButton" parent="CursorCamera/ToolBelt/Options_Menu"]
z_index = 3
texture_filter = 1
offset_left = 21.0
offset_top = -6.0
offset_right = 29.0
offset_bottom = 2.0
texture_normal = ExtResource("18_kd1qr")
texture_hover = ExtResource("19_vhcwi")

[node name="Options_Tooltip" type="Label" parent="CursorCamera/ToolBelt/Options_Menu"]
z_index = 3
texture_filter = 1
offset_left = -26.0
offset_top = -6.0
offset_right = 38.0
offset_bottom = 2.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = ExtResource("6_nh7hm")
autowrap_mode = 3

[node name="Energy_Menu" type="Sprite2D" parent="CursorCamera/ToolBelt"]
visible = false
z_index = 3
position = Vector2(0, 26)
texture = ExtResource("11_m46n3")

[node name="Energy_Stored" type="Label" parent="CursorCamera/ToolBelt/Energy_Menu"]
z_index = 3
texture_filter = 1
offset_left = -30.0
offset_top = -8.0
offset_right = 34.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = ExtResource("6_nh7hm")
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Resource_Menu" type="Sprite2D" parent="CursorCamera/ToolBelt"]
visible = false
z_index = 3
position = Vector2(0, 26)
texture = ExtResource("11_m46n3")

[node name="Carrot_Pic" type="Sprite2D" parent="CursorCamera/ToolBelt/Resource_Menu"]
position = Vector2(-25, -5)
texture = ExtResource("20_1oqm3")

[node name="Carrot_Label" type="Label" parent="CursorCamera/ToolBelt/Resource_Menu"]
offset_left = -20.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = ExtResource("6_nh7hm")

[node name="Poppy_Pic" type="Sprite2D" parent="CursorCamera/ToolBelt/Resource_Menu"]
position = Vector2(4, -3)
texture = ExtResource("21_htfj4")

[node name="Poppy_Label" type="Label" parent="CursorCamera/ToolBelt/Resource_Menu"]
offset_left = 9.0
offset_top = -8.0
offset_right = 49.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = ExtResource("6_nh7hm")

[node name="Apple_Pic" type="Sprite2D" parent="CursorCamera/ToolBelt/Resource_Menu"]
position = Vector2(4, 3)
texture = ExtResource("22_kyist")

[node name="Apple_Label" type="Label" parent="CursorCamera/ToolBelt/Resource_Menu"]
offset_left = 9.0
offset_top = -1.0
offset_right = 49.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = ExtResource("6_nh7hm")

[node name="Blueberry_Pic" type="Sprite2D" parent="CursorCamera/ToolBelt/Resource_Menu"]
position = Vector2(-25, 3)
texture = ExtResource("23_7qp5h")

[node name="Blueberry_Label" type="Label" parent="CursorCamera/ToolBelt/Resource_Menu"]
offset_left = -20.0
offset_top = -1.0
offset_right = 20.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("5_t04wn")
label_settings = ExtResource("6_nh7hm")

[node name="Time Indicator" type="Sprite2D" parent="CursorCamera"]
z_index = 3
position = Vector2(-24, -24)
texture = ExtResource("24_bh51l")
hframes = 2
vframes = 3
region_rect = Rect2(0, 0, 32, 48)

[node name="Energy Indicator" type="Node2D" parent="CursorCamera"]
z_index = 7
position = Vector2(12, -32)

[node name="Sprite2D" type="Sprite2D" parent="CursorCamera/Energy Indicator"]
texture = ExtResource("25_x356o")
centered = false

[node name="Label" type="Label" parent="CursorCamera/Energy Indicator"]
offset_left = -20.0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 17.0
label_settings = SubResource("LabelSettings_i022j")
horizontal_alignment = 2

[node name="TextureRect" type="ColorRect" parent="."]
offset_left = -18.0
offset_top = 8.0
offset_right = 22.0
offset_bottom = 32.0
color = Color(0.129412, 0.184314, 0.141176, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rx43r")
}
speed_scale = 2.0

[node name="Fade_Anim" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade_Anim"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ntmuj")
}

[node name="Fade" type="ColorRect" parent="Fade_Anim"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27_i442l")
volume_db = 10.0
autoplay = true

[connection signal="animation_finished" from="Fade_Anim/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
